Fix #629: Review Java warnings (#630)
* Fix #629: Review Java warnings
* StandardCharsets.UTF_8 can be used
* Add @Serial annotation to serialVersionUID
* Simplify Optional call
* Use Files.readString
* Replace explicit type argument by diamond operator
* Replace lambda statement by expression
* Enhance switch statement
* Use text block
* Use pattern variable for instanceof
* Convert Violation class to record
* Add final keyword to edited lines