@@ -36,8 +36,8 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.List;
@@ -203,7 +203,7 @@ public class PushServerClient {
         logger.info("Calling push server update device status, activation ID: {} - start", activationId);
         // Note that there is just plain 'request' in the request, not 'new ObjectRequest<>(request)'.
         // This is due to the fact that standard PowerAuth Server callback format is used here.
-        Response response = postImpl("/push/device/status/update", request, new ParameterizedTypeReference<Response>(){});
+        final Response response = postImpl("/push/device/status/update", request, new ParameterizedTypeReference<>(){});
         logger.info("Calling push server update device status, activation ID: {} - finish", activationId);
 
         return response.getStatus().equals(Response.Status.OK);
@@ -323,17 +323,13 @@ public class PushServerClient {
      * @throws PushServerClientException In case of network, response / JSON processing, or other IO error.
      */
     public boolean deleteCampaign(Long campaignId) throws PushServerClientException {
-        try {
-            String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), "UTF-8");
+        final String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), StandardCharsets.UTF_8);
 
-            logger.info("Calling push server to delete a push campaign, campaign ID: {} - start", campaignId);
-            ObjectResponse<DeleteCampaignResponse> response = postObjectImpl("/push/campaign/" + campaignIdSanitized + "/delete", null, DeleteCampaignResponse.class);
-            logger.info("Calling push server to delete a push campaign, campaign ID: {} - finish", campaignId);
+        logger.info("Calling push server to delete a push campaign, campaign ID: {} - start", campaignId);
+        final ObjectResponse<DeleteCampaignResponse> response = postObjectImpl("/push/campaign/" + campaignIdSanitized + "/delete", null, DeleteCampaignResponse.class);
+        logger.info("Calling push server to delete a push campaign, campaign ID: {} - finish", campaignId);
 
-            return response.getStatus().equals(Response.Status.OK);
-        } catch (UnsupportedEncodingException e) {
-            throw new PushServerClientException(new Error("PUSH_SERVER_CLIENT_ERROR", e.getMessage()));
-        }
+        return response.getStatus().equals(Response.Status.OK);
     }
 
     /**
@@ -362,17 +358,13 @@ public class PushServerClient {
      * @throws PushServerClientException In case of network, response / JSON processing, or other IO error.
      */
     public ObjectResponse<CampaignResponse> getCampaign(Long campaignId) throws PushServerClientException {
-        try {
-            String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), "UTF-8");
+        final String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), StandardCharsets.UTF_8);
 
-            logger.info("Calling push server to obtain a push campaign detail, campaign ID: {} - start", campaignId);
-            final ObjectResponse<CampaignResponse> result = getObjectImpl("/push/campaign/" + campaignIdSanitized + "/detail", null, CampaignResponse.class);
-            logger.info("Calling push server to obtain a push campaign detail, campaign ID: {} - finish", campaignId);
+        logger.info("Calling push server to obtain a push campaign detail, campaign ID: {} - start", campaignId);
+        final ObjectResponse<CampaignResponse> result = getObjectImpl("/push/campaign/" + campaignIdSanitized + "/detail", null, CampaignResponse.class);
+        logger.info("Calling push server to obtain a push campaign detail, campaign ID: {} - finish", campaignId);
 
-            return result;
-        } catch (UnsupportedEncodingException e) {
-            throw new PushServerClientException(new Error("PUSH_SERVER_CLIENT_ERROR", e.getMessage()));
-        }
+        return result;
     }
 
     /**
@@ -384,22 +376,18 @@ public class PushServerClient {
      * @throws PushServerClientException In case of network, response / JSON processing, or other IO error.
      */
     public boolean addUsersToCampaign(Long campaignId, List<String> users) throws PushServerClientException {
-        try {
-            ListOfUsers listOfUsers = new ListOfUsers(users);
-            String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), "UTF-8");
+        final ListOfUsers listOfUsers = new ListOfUsers(users);
+        final String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), StandardCharsets.UTF_8);
 
-            logger.info("Calling push server to add users to campaign, campaign ID: {} - start", campaignId);
-            Response response = putObjectImpl("/push/campaign/" + campaignIdSanitized + "/user/add", new ObjectRequest<>(listOfUsers));
-            logger.info("Calling push server to add users to campaign, campaign ID: {} - finish", campaignId);
+        logger.info("Calling push server to add users to campaign, campaign ID: {} - start", campaignId);
+        final Response response = putObjectImpl("/push/campaign/" + campaignIdSanitized + "/user/add", new ObjectRequest<>(listOfUsers));
+        logger.info("Calling push server to add users to campaign, campaign ID: {} - finish", campaignId);
 
-            if (response == null) {
-                throw new PushServerClientException(new Error("PUSH_SERVER_CLIENT_ERROR", "Network communication has failed."));
-            }
-
-            return response.getStatus().equals(Response.Status.OK);
-        } catch (UnsupportedEncodingException e) {
-            throw new PushServerClientException(new Error("PUSH_SERVER_CLIENT_ERROR", e.getMessage()));
+        if (response == null) {
+            throw new PushServerClientException(new Error("PUSH_SERVER_CLIENT_ERROR", "Network communication has failed."));
         }
+
+        return response.getStatus().equals(Response.Status.OK);
     }
 
     /**
@@ -412,19 +400,15 @@ public class PushServerClient {
      * @throws PushServerClientException In case of network, response / JSON processing, or other IO error.
      */
     public PagedResponse<ListOfUsersFromCampaignResponse> getListOfUsersFromCampaign(Long campaignId, int page, int size) throws PushServerClientException {
-        try {
-            String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), "UTF-8");
-            MultiValueMap<String, String> params = buildPages(page, size);
+        final String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), StandardCharsets.UTF_8);
+        final MultiValueMap<String, String> params = buildPages(page, size);
 
-            ParameterizedTypeReference<PagedResponse<ListOfUsersFromCampaignResponse>> typeReference = new ParameterizedTypeReference<PagedResponse<ListOfUsersFromCampaignResponse>>() {};
-            logger.info("Calling push server to get users from the campaign, campaign ID: {} - start", campaignId);
-            final PagedResponse<ListOfUsersFromCampaignResponse> result = getImpl("/push/campaign/" + campaignIdSanitized + "/user/list", params, typeReference);
-            logger.info("Calling push server to get users from the campaign, campaign ID: {} - finish", campaignId);
+        final ParameterizedTypeReference<PagedResponse<ListOfUsersFromCampaignResponse>> typeReference = new ParameterizedTypeReference<>() {};
+        logger.info("Calling push server to get users from the campaign, campaign ID: {} - start", campaignId);
+        final PagedResponse<ListOfUsersFromCampaignResponse> result = getImpl("/push/campaign/" + campaignIdSanitized + "/user/list", params, typeReference);
+        logger.info("Calling push server to get users from the campaign, campaign ID: {} - finish", campaignId);
 
-            return result;
-        } catch (UnsupportedEncodingException e) {
-            throw new PushServerClientException(new Error("PUSH_SERVER_CLIENT_ERROR", e.getMessage()));
-        }
+        return result;
     }
 
     /**
@@ -436,18 +420,14 @@ public class PushServerClient {
      * @throws PushServerClientException In case of network, response / JSON processing, or other IO error.
      */
     public boolean deleteUsersFromCampaign(Long campaignId, List<String> users) throws PushServerClientException {
-        try {
-            ListOfUsers listOfUsers = new ListOfUsers(users);
-            String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), "UTF-8");
+        final ListOfUsers listOfUsers = new ListOfUsers(users);
+        final String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), StandardCharsets.UTF_8);
 
-            logger.info("Calling push server to remove users from the campaign, campaign ID: {} - start", campaignId);
-            Response response = postObjectImpl("/push/campaign/" + campaignIdSanitized + "/user/delete", new ObjectRequest<>(listOfUsers));
-            logger.info("Calling push server to remove users from the campaign, campaign ID: {} - finish", campaignId);
+        logger.info("Calling push server to remove users from the campaign, campaign ID: {} - start", campaignId);
+        final Response response = postObjectImpl("/push/campaign/" + campaignIdSanitized + "/user/delete", new ObjectRequest<>(listOfUsers));
+        logger.info("Calling push server to remove users from the campaign, campaign ID: {} - finish", campaignId);
 
-            return response.getStatus().equals(Response.Status.OK);
-        } catch (UnsupportedEncodingException e) {
-            throw new PushServerClientException(new Error("PUSH_SERVER_CLIENT_ERROR", e.getMessage()));
-        }
+        return response.getStatus().equals(Response.Status.OK);
     }
 
     /**
@@ -459,25 +439,21 @@ public class PushServerClient {
      * @throws PushServerClientException In case of network, response / JSON processing, or other IO error.
      */
     public boolean sendTestCampaign(Long campaignId, String userId) throws PushServerClientException {
-        try {
-            String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), "UTF-8");
-            TestCampaignRequest request = new TestCampaignRequest();
-            request.setUserId(userId);
+        final String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), StandardCharsets.UTF_8);
+        final TestCampaignRequest request = new TestCampaignRequest();
+        request.setUserId(userId);
 
-            // Validate request on the client side.
-            String error = TestCampaignRequestValidator.validate(request);
-            if (error != null) {
-                throw new PushServerClientException(error);
-            }
-
-            logger.info("Calling push server to send test campaign, campaign ID: {}, user ID: {} - start", campaignId, userId);
-            Response response = postObjectImpl("/push/campaign/send/test/" + campaignIdSanitized, new ObjectRequest<>(request));
-            logger.info("Calling push server to send test campaign, campaign ID: {}, user ID: {} - finish", campaignId, userId);
-
-            return response.getStatus().equals(Response.Status.OK);
-        } catch (UnsupportedEncodingException e) {
-            throw new PushServerClientException(new Error("PUSH_SERVER_CLIENT_ERROR", e.getMessage()));
+        // Validate request on the client side.
+        final String error = TestCampaignRequestValidator.validate(request);
+        if (error != null) {
+            throw new PushServerClientException(error);
         }
+
+        logger.info("Calling push server to send test campaign, campaign ID: {}, user ID: {} - start", campaignId, userId);
+        final Response response = postObjectImpl("/push/campaign/send/test/" + campaignIdSanitized, new ObjectRequest<>(request));
+        logger.info("Calling push server to send test campaign, campaign ID: {}, user ID: {} - finish", campaignId, userId);
+
+        return response.getStatus().equals(Response.Status.OK);
     }
 
     /**
@@ -488,17 +464,13 @@ public class PushServerClient {
      * @throws PushServerClientException In case of network, response / JSON processing, or other IO error.
      */
     public boolean sendCampaign(Long campaignId) throws PushServerClientException {
-        try {
-            String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), "UTF-8");
+        final String campaignIdSanitized = URLEncoder.encode(String.valueOf(campaignId), StandardCharsets.UTF_8);
 
-            logger.info("Calling push server to send a production campaign, campaign ID: {} - start", campaignId);
-            Response response = postObjectImpl("/push/campaign/send/live/" + campaignIdSanitized, null);
-            logger.info("Calling push server to send a production campaign, campaign ID: {} - finish", campaignId);
+        logger.info("Calling push server to send a production campaign, campaign ID: {} - start", campaignId);
+        final Response response = postObjectImpl("/push/campaign/send/live/" + campaignIdSanitized, null);
+        logger.info("Calling push server to send a production campaign, campaign ID: {} - finish", campaignId);
 
-            return response.getStatus().equals(Response.Status.OK);
-        } catch (UnsupportedEncodingException e) {
-            throw new PushServerClientException(new Error("PUSH_SERVER_CLIENT_ERROR", e.getMessage()));
-        }
+        return response.getStatus().equals(Response.Status.OK);
     }
 
     /**
@@ -649,7 +621,7 @@ public class PushServerClient {
         params.add("applications", String.join(",", applications));
         params.add("onlyUnread", Boolean.toString(onlyUnread));
 
-        final ParameterizedTypeReference<PagedResponse<ListOfInboxMessages>> typeReference = new ParameterizedTypeReference<PagedResponse<ListOfInboxMessages>>() {};
+        final ParameterizedTypeReference<PagedResponse<ListOfInboxMessages>> typeReference = new ParameterizedTypeReference<>() {};
         logger.info("Calling push server fetch messages for user: {} - start", userId);
         final PagedResponse<ListOfInboxMessages> result = getImpl("/inbox/messages/list", params, typeReference);
         logger.info("Calling push server fetch messages for user: {} - finish", userId);
@@ -669,7 +641,7 @@ public class PushServerClient {
         params.add("userId", userId);
         params.add("appId", appId);
 
-        final ParameterizedTypeReference<ObjectResponse<GetInboxMessageCountResponse>> typeReference = new ParameterizedTypeReference<ObjectResponse<GetInboxMessageCountResponse>>() {};
+        final ParameterizedTypeReference<ObjectResponse<GetInboxMessageCountResponse>> typeReference = new ParameterizedTypeReference<>() {};
         logger.info("Calling push server fetch message count for user: {} - start", userId);
         final ObjectResponse<GetInboxMessageCountResponse> result = getImpl("/inbox/messages/count", params, typeReference);
         logger.info("Calling push server fetch message count for user: {} - finish", userId);
